<resources>
    <string name="app_name">share笔记</string>
    <string name="notebook">笔记本</string>
    <string name="recycle">回收站</string>
    <string name="tar">标签</string>
    <string name="night">夜间模式</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="welcome">Welcome</string>
    <string name="username">请输入用户名</string>
    <string name="enter_nickname">请输入昵称</string>
    <string name="password">请输入密码</string>
    <string name="password_check">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title">笔记标题</string>
    <string name="content">写点东西吧&#8230;</string>
    <string name="half_hour">半小时前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="just_now">刚刚</string>
    <string name="before_hour" formatted="false">%d\u0020小时前</string>
    <string name="before_day" formatted="false">%d\u0020天前</string>
    <string name="before_week" formatted="false">%d\u0020周前</string>
    <string name="before_month" formatted="false">%d\u0020个月前</string>
    <string name="before_year" formatted="false">%d\u0020年前</string>
    <string name="give_up_modification">放弃修改？</string>
    <string name="not_save">你的修改还未保存。是否放弃修改？</string>
    <string name="delete">删除该笔记</string>
    <string name="star">添加为收藏</string>
    <string name="btn_link_to_register">没有账号？立即注册。</string>
    <string name="btn_link_to_login">已经注册？立即登录。</string>
    <string name="connecting">connecting…</string>
    <string name="connect_to_server">connect to server</string>

    <string name="self_info">个人信息</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_release">我的发布</string>
    <string name="set">设置</string>
    <string name="main_page">首页</string>

    <string name="maohao">\@</string>
    <string name="add_comment">添加评论</string>
    <string name="send">发送</string>
    <string name="add_comment_success">发表评论成功</string>
    <string name="current_not_article">当前没有笔记</string>
    <string name="comment_area">评论区</string>
    <string name="reply_comment_success">回复评论成功！</string>
    <string name="like_cuccess">收藏成功</string>
    <string name="follow_success">已关注</string>
    <string name="please_login">请登录</string>
    <string name="please_check_network_status">请检查网络</string>

    <string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_save">保存</string>
    <string name="action_preview">预览</string>



    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_clear_cache">清理缓存和历史</string>
    <string name="action_clear_cookie">清理cookie</string>
    <string name="action_share">发布帖子</string>
    <string name="action_paste">粘贴</string>
    <string name="action_copy">复制</string>
    <string name="action_cut">剪切</string>
    <string name="action_delete">删除</string>
    <string name="action_rename">重命名</string>
    <string name="create_folder">新建文件夹</string>
    <string name="action_search">搜索文章</string>
    <string name="action_create_file">创建文章</string>

    <string name="action_other_operate">其他操作</string>
    <string name="action_helper">语法参考</string>
    <string name="action_edit">编辑</string>
    <string name="action_setting">设置</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Welcome</string>
    <string name="title_prompt">请输入标题</string>
    <string name="add_img">添加图片</string>
    <string name="add_text">添加文字</string>
    <string name="all_clear">清空</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <string name="like">喜欢</string>
    <string name="follow">关注</string>
    <string name="other_login">其他登录方式</string>
    <string name="registered">注册</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex_secret">保密</string>
    <string name="phone">手机号</string>
    <string name="nickname">昵称</string>
    <string name="welcome_register">欢迎您注册</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="person_info">个人资料</string>
    <string name="update_head_success">头像更新成功！</string>
    <string name="edit_nickname">编辑昵称</string>
    <string name="edit_phone_number">编辑手机号</string>
    <string name="edit_city">编辑城市</string>
    <string name="edit_email">编辑邮箱</string>
    <string name="update_password">更新密码</string>
    <string name="update_sign">更新签名</string>
    <string name="update_nickname_success">昵称更新成功</string>
    <string name="update_phone_success">手机号更新成功！</string>
    <string name="update_sign_success">签名更新成功！</string>
    <string name="update_city_success">更新城市成功！</string>
    <string name="update_sex_success">更新性别成功！</string>
    <string name="update_birthday_succes">生日更新成功！</string>
    <string name="update_email_success">邮箱更新成功！</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="update_password_succss">密码更新成功！</string>
    <string name="confirm_password">确认密码</string>
    <string name="secret_man">神秘人</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="collect">收藏</string>
    <string name="my_public_dynamic">我的发布</string>
    <string name="public_dynamic">发布笔记</string>
    <string name="my_dynamic">私密笔记</string>
    <string name="user_message">用户信息</string>
    <string name="my_comment">我的评论</string>
    <string name="exit_login">退出登录</string>
    <string name="read_section">订阅的栏目</string>
    <string name="login_success">登陆成功</string>
    <string name="upload_success">上传成功</string>
    <string name="pic_uploading">正在上传图片…</string>
    <string name="no_can_null">不能为空</string>
    <string name="insert_link">插入链接</string>
    <string name="insert_table">插入表格</string>
    <string name="upload_fail">上传失败！</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容！</string>
    <string name="release_fail">发布失败</string>
    <string name="release_success">发布成功</string>
    <string name="save_fail">发布失败</string>
    <string name="save_success">发布成功</string>
    <string name="now_releasing_article">正在发布笔记…</string>
    <string name="network_err">Simulation network error</string>
    <string name="jin">#</string>

    <string name="key_phone_number_attribute">f3e2cd2caa8f1eb446078eb63edf3f87</string>
    <string name="cache_size">缓存大小</string>
    <string name="copy_right" translatable="false">Copyrights © 2016</string>
    <string name="contact_me">联系我</string>
    <string name="yanzhengma">获取短信验证码</string>
    <string name="title_activity_setting">设置</string>
    <string name="net_mode">网络模式</string>
    <string name="update_wifi">Wifi下自动更新</string>
    <string name="account_binding">账号和绑定设置</string>
    <string name="message_personal">消息和隐私设置</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="guanyudushubiji">关于share笔记</string>
    <string name="update_operate">手动检查更新</string>
    <string name="version">版本</string>

    
    <string name="cancel_collection">取消收藏</string>
    <string name="new_feature">新功能敬请期待</string>

</resources>
