<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notebookMenuId"
            android:title="@string/notebook"/>
        <item
            android:id="@+id/tarMenuId"
            android:title="@string/tar"/>
        <item
            android:id="@+id/recycleMenuId"
            android:title="@string/recycle"/>
    </group>
    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nightMenuId"
                android:title="@string/night"/>
            <item
                android:id="@+id/settingMenuId"
                android:title="@string/setting"/>
            <item
                android:id="@+id/aboutMenuId"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>