
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".view.EditorActivity">

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="80"
        android:title="@string/action_undo"
        android:icon="@mipmap/ic_action_undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="81"
        android:title="@string/action_redo"
        android:icon="@mipmap/ic_action_redo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_preview"
        android:icon="@mipmap/ic_action_preview_menu"
        android:orderInCategory="86"
        android:title="@string/action_preview"
        app:showAsAction="never"/>

</menu>